@@ -1,3 +1,9 @@
+2012-04-20 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/hc08/ralloc2.cc,
+	  src/hc08/gen.c:
+	  Remove accuse.
+
 2012-04-19 Raphael Neider <rneider AT web.de>
 
 	* device/lib/pic16/libc/stdio/strmmssp.c:
